src/sass/components/_header.sass
.header
  padding: 15px 0
  background: #fff
  position: relative
  // left: 0
  // right: 0
  // top: 0
  // width: 100%
  z-index: 10
  .container
    @include flexbox
    align-items: center
  &-burger
    width: 38px
    height: 33px
    background: url(../img/icons/burger.svg) no-repeat
    display: block
    cursor: pointer
  &-logo
    margin-left: 115px
    img
      height: 75px
  &-search
    margin: 0 auto
    position: relative
    &__assistant
      position: absolute
      overflow: hidden
      top: -10px
      left: -10px
      right: -10px
      background: #fff
      box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.18)
      border-radius: 5px
      padding-top: 70px
      opacity: 0
      height: 50px
      transition: .3s
      padding: 69px 20px 22px
      z-index: 9
      a
        color: $color-black
        display: block
        background: url(../img/icons/assistant.svg) no-repeat right center
        b
          font-size: 18px
          font-weight: 600
          display: block
          margin-bottom: 5px
        p
          font-size: 14px
    &:hover
      .header-search__assistant
        height: 132px
        opacity: 1
    &__input
      width: 290px
      height: 40px
      border-radius: 5px
      border: 1px solid #9f9f9f
      padding: 0
      padding-left: 18px
      padding-right: 40px
      font-size: 12px
      @include placeholder
        color: #929292
    &__btn
      width: 40px
      height: 40px
      position: absolute
      top: 0
      right: 0
      border: 0
      background-color: inherit
      background-image: url(../img/icons/search.svg)
      background-repeat: no-repeat
      background-position: center center
      cursor: pointer
    form
      position: relative
      z-index: 10
  &-controls
    @include flexbox
    align-items: center
    &__item
      @include flexbox
      align-items: center
      justify-content: center
      width: 61px
      height: 47px
      position: relative
      cursor: pointer
    &__favorites
      background: url(../img/icons/favorites.svg) no-repeat center center
      width: 58px
    &__user
      background: url(../img/icons/user.svg) no-repeat center center
    &__cart
      background: #ab4188 url(../img/icons/cart.svg) no-repeat center center
      .header-controls__badge
        right: -5px
    &__badge
      width: 25px
      height: 25px
      border-radius: 100%
      background: #fff
      position: absolute
      top: -5px
      right: 1px
      box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.18)
      text-align: center
      line-height: 25px
      font-size: 14px
      color: #404040
      font-weight: 900
    &__detail
      position: absolute
      top: 48px
      left: -24px
      display: none
      padding-top: 20px
      filter: drop-shadow(0 0 24px rgba(0, 0, 0, 0.18))
      cursor: default
      &-content
        width: 290px
        background: #fff
        border-radius: 5px
        padding: 30px
        // box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.18)
      &-drop
        position: absolute
        top: -3px
        left: 40px
        width: 26px
        height: 23px
        background: url(../img/icons/favorites-detail.svg) no-repeat
      h3
        font-size: 14px
        font-weight: 600
      &-item
        @include flexbox
        // align-items: flex-start
        margin-top: 20px
      &-img
        width: 85px
        height: 100px
        background-color: #eee
        border-radius: 5px
      &-info
        width: calc(100% - 85px)
        padding-left: 20px
        p
          font-size: 14px
          margin-bottom: 17px
        b
          font-weight: 600
      &-btn
        display: block
        width: 100%
        height: 50px
        border-radius: 5px
        background: #b14a8f
        color: #fff
        text-align: center
        font-weight: 600
        margin-top: 30px
        line-height: 50px
  &-nav
    height: 60px
    background-color: #1b1c1f
    position: relative
    z-index: 30
    // &.scroll
    //   overflow-x: scroll
    //   overflow-y: hidden
    .container
      @include flexbox
      flex-flow: row nowrap
      position: initial
    &__list
      @include flexbox
      align-items: center
      flex: 1 0 auto
      li
        &:first-child
          margin-left: -35px
        a
          font-size: 16px
          font-weight: 500
          color: #fff
          padding: 21px 35px
          text-align: center
          display: block
          transition: 0.3s
          position: relative
          &:hover
            background-color: #ab4188
        &:hover .header-nav__dropdown
          max-height: 700px
          padding: 50px 0 110px
          
    &::-webkit-scrollbar-track
      background-color: inherit
    &::-webkit-scrollbar
      height: 4px
    &::-webkit-scrollbar-thumb
      border-radius: 10px
      background-color: rgba(255,255,255,.3)
    &__dropdown
      position: absolute
      left: 0
      right: 0
      // padding: 50px 0 110px
      max-height: 0
      background: #fff
      overflow: hidden
      z-index: 20
      transition: max-height .3s, padding .3s
      &-type, &-color
        width: 27%
      &-promotion
        width: 46%
      &-title
        font-size: 24px
        font-weight: 600
        height: 65px
      &-list
        padding-right: 30px
        li
          margin-left: 0 !important
          margin-bottom: 30px
          &:last-child
            margin-bottom: 0
          a
            position: relative
            font-size: 18px
            display: block
            color: $color-black
            padding: 0 0 0 30px
            text-align: left
            font-weight: 400
            &:before
              content: ''
              position: absolute
              left: 0
              top: 1px
              width: 16px
              height: 16px
              border: 1px solid $color-black
              border-radius: 100%
              transition: .3s
              box-shadow: inset 0 0 0 3px #fff
            &:hover
              background-color: #fff
              color: #ab4188
              &:before
                border: 1px solid #ab4188
                background: #ab4188
        &-none
          display: block
          height: 1px
      &-images
        li
          margin-left: 0 !important
          margin-bottom: 10px
          &:last-child
            margin-bottom: 0
          a
            display: block
            max-width: 265px
            height: 60px
            background-size: cover
            background-repeat: no-repeat
            background-position: center center
            background-color: #eee
      &-promo
        @include flexbox
        justify-content: space-between
        padding-right: 40px
        li
          width: 265px
          height: 270px
          margin-left: 0 !important
          a
            display: block
            width: 100%
            height: 100%
            background-size: cover
            background-repeat: no-repeat
            background-position: center center
            background: #eee
            position: relative
            color: $color-black
            padding: 0
            p
              position: absolute
              left: 30px
              bottom: 19px
              font-size: 24px
              font-weight: 600


.nav
  &.fixed
    .nav-content
      left: 0
      position: fixed
  &-bg
    position: absolute
    top: 0
    left: 0
    right: 0
    bottom: 0
    background: #1b1c1f
    z-index: 99
    display: none
    opacity: 0.24
  &-content
    background: #fff
    height: 100%
    width: 410px
    @include flexbox
    align-items: center
    transition: .3s
    position: absolute
    top: 0
    bottom: 0
    z-index: 100
    left: -410px
    ul
      position: relative
      z-index: 10
      width: 100%
      li
        a
          height: 75px
          @include flexbox
          align-items: center
          padding-left: 85px
          font-size: 18px
          font-weight: 600
          color: $color-black
          position: relative
          &:hover
            color: #ab4188
            text-decoration: underline
            &:before
              width: 100%
          &:before
            content: ''
            position: absolute
            top: 0
            left: 0
            bottom: 0
            right: 0
            width: 0%
            z-index: -1
            background-image: linear-gradient( 90deg, rgb(232,202,222) 0%, rgb(253,250,252) 100%)
            transition: .3s
  &-close
    width: 34px
    height: 34px
    position: absolute
    background: url(../img/icons/close-nav.svg) no-repeat
    left: 85px
    top: 34px
    cursor: pointer

